Kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: snappy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-container
  template:
    metadata:
      labels:
        app: frontend-container
    spec:
      containers:
      - name: frontend
        image: subhabrata3002/snappy-public-repo:latest
        ports:
        - containerPort: 3000
        resources:   # Moved resources field inside the container definition
          requests:
            memory: "1024Mi"
            cpu: "500m"
          limits:
            memory: "2048Mi"
            cpu: "750m"
      automountServiceAccountToken: false
