Kubernetes/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: snappy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-container
  template:
    metadata:
      labels:
        app: mongodb-container
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      automountServiceAccountToken: false
