Kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: snappy
spec:
  selector:
    app: backend-container
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30980
