Kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: snappy  # Added namespace
spec:
  selector:
    app: frontend-container
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30970
  type: NodePort
