Kubernetes/mango-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mangodb-service
  namespace: snappy
spec:
  selector:
    app: mangodb-container
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
