Kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: snappy
spec:
  selector:
    app: mongodb-container
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
