Kubernetes/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-for-snappy
  namespace: prometheus-node-exporter
spec:
  selector:
    app: node-exporter
  ports:
  - name: node-exporter
    protocol: TCP
    port: 9100
    targetPort: 9100
  type: NodePort
